force-app/main/default/objects/testflightinfo__c/testflightinfo__c.object-meta.xml
<CustomObject>
    <description>Data about flight information from API</description>
    <label>testflightinfo</label>
    <nameField>
        <displayFormat>FL-{000000}</displayFormat>
        <label>testflightinfoID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>testflightinfos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>