force-app/main/default/objects/testflightinfo__c/fields/actual_arrival_utc__c.field-meta.xml
<CustomField>
    <fullName>actual_arrival_utc__c</fullName>
    <description>actual_arrival_utc</description>
    <label>actual_arrival_utc</label>
    <type>DateTime</type>
</CustomField>