force-app/main/default/objects/testflightinfo__c/fields/actual_departure_utc__c.field-meta.xml
<CustomField>
    <fullName>actual_departure_utc__c</fullName>
    <description>actual_departure_utc</description>
    <label>actual_departure_utc</label>
    <type>DateTime</type>
</CustomField>