force-app/main/default/objects/testflightinfo__c/fields/arrival_city__c.field-meta.xml
<CustomField>
    <fullName>arrival_city__c</fullName>
    <description>arrival_city</description>
    <label>arrival_city</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>