force-app/main/default/objects/testflightinfo__c/fields/arrival_iata__c.field-meta.xml
<CustomField>
    <fullName>arrival_iata__c</fullName>
    <description>arrival_iata</description>
    <label>arrival_iata</label>
    <length>255</length>
    <type>Text</type>
</CustomField>