force-app/main/default/objects/testflightinfo__c/fields/arrival_icao__c.field-meta.xml
<CustomField>
    <fullName>arrival_icao__c</fullName>
    <description>arrival_icao</description>
    <label>arrival_icao</label>
    <length>255</length>
    <type>Text</type>
</CustomField>