force-app/main/default/objects/testflightinfo__c/fields/arrival_name__c.field-meta.xml
<CustomField>
    <fullName>arrival_name__c</fullName>
    <description>arrival_name</description>
    <label>arrival_name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>