force-app/main/default/objects/testflightinfo__c/fields/arrival_terminal__c.field-meta.xml
<CustomField>
    <fullName>arrival_terminal__c</fullName>
    <description>arrival_terminal</description>
    <label>arrival_terminal</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>