force-app/main/default/objects/testflightinfo__c/fields/date__c.field-meta.xml
<CustomField>
    <fullName>date__c</fullName>
    <description>date</description>
    <label>date</label>
    <type>DateTime</type>
</CustomField>