force-app/main/default/objects/testflightinfo__c/fields/departure_city__c.field-meta.xml
<CustomField>
    <fullName>departure_city__c</fullName>
    <description>departure_city</description>
    <label>departure_city</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>