force-app/main/default/objects/testflightinfo__c/fields/departure_gate__c.field-meta.xml
<CustomField>
    <fullName>departure_gate__c</fullName>
    <description>departure_gate</description>
    <label>departure_gate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>