force-app/main/default/objects/testflightinfo__c/fields/departure_iata__c.field-meta.xml
<CustomField>
    <fullName>departure_iata__c</fullName>
    <description>departure_iata</description>
    <label>departure_iata</label>
    <length>255</length>
    <type>Text</type>
</CustomField>