force-app/main/default/objects/testflightinfo__c/fields/departure_icao__c.field-meta.xml
<CustomField>
    <fullName>departure_icao__c</fullName>
    <description>departure_icao</description>
    <label>departure_icao</label>
    <length>255</length>
    <type>Text</type>
</CustomField>