force-app/main/default/objects/testflightinfo__c/fields/departure_name__c.field-meta.xml
<CustomField>
    <fullName>departure_name__c</fullName>
    <description>departure_name</description>
    <inlineHelpText>departure_name</inlineHelpText>
    <label>departure_name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>