force-app/main/default/objects/testflightinfo__c/fields/departure_terminal__c.field-meta.xml
<CustomField>
    <fullName>departure_terminal__c</fullName>
    <description>departure_terminal</description>
    <label>departure_terminal</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>