force-app/main/default/objects/testflightinfo__c/fields/flnr__c.field-meta.xml
<CustomField>
    <fullName>flnr__c</fullName>
    <description>Flight No</description>
    <externalId>true</externalId>
    <label>flnr</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>