force-app/main/default/objects/testflightinfo__c/fields/scheduled_departure_utc__c.field-meta.xml
<CustomField>
    <fullName>scheduled_departure_utc__c</fullName>
    <description>scheduled_departure_utc</description>
    <label>scheduled_departure_utc</label>
    <type>DateTime</type>
</CustomField>